<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_photo"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteX="24dp" />
            <RelativeLayout
                android:id="@+id/layoutImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtProfile"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/photo" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_create"
                    android:layout_alignRight="@+id/imgProfile"
                    android:layout_alignBottom="@+id/imgProfile"/>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteX="24dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/layoutLastName"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteX="24dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/txtAddFormerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD FORMER NAME"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/layoutLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtAddFormerName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteX="24dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/headline" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/txtEducation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutHeadline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/education"
                android:paddingLeft="5dp"
                android:layout_marginTop="20dp"
                tools:layout_editor_absoluteX="24dp" />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                style="@style/Spinner"
                app:layout_constraintTop_toBottomOf="@+id/txtEducation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/universities">
            </Spinner>
            <TextView
                android:id="@+id/txtAddNewEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_education"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/spinner1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                style="@style/Spinner"
                app:layout_constraintTop_toBottomOf="@+id/txtAddNewEducation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/countries"
                android:layout_marginTop ="10dp">
            </Spinner>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutZipcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spinner2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="25dp"
                tools:layout_editor_absoluteX="24dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zip_code" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/txtUseCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_current_location"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/layoutZipcode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutIndustry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtUseCurrentLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/industry" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutIndustry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="25dp"
                tools:layout_editor_absoluteX="24dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/summary" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/txtMedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutSummary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/media"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:layout_marginTop="25dp"
                tools:layout_editor_absoluteX="24dp" />
            <TextView
                android:id="@+id/txtDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtMedia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/add_or_link_to_external_documents_photos_sites_videos_and_presentations"
                android:paddingLeft="5dp"
                tools:layout_editor_absoluteX="24dp" />
            <RelativeLayout
                android:id="@+id/layoutBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <Button
                    android:id="@+id/btnUpload"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/upload"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:id="@+id/btnLink"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border"
                    android:text="@string/link"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorGray"
                tools:layout_editor_absoluteX="24dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp">
                <ImageView
                    android:id="@+id/imgHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_help"
                    app:layout_constraintTop_toBottomOf="@+id/line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/txtProviders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/line"
                    app:layout_constraintStart_toStartOf="@id/imgHelp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/supported_providers"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
